istioctl/cmd/testdata/inject-config-annotation.yaml
policy: enabled
neverInjectSelector:
  - matchLabels:
      test: new
template: |-
  initContainers:
  - name: istio-init
    image: docker.io/istio/proxy_init:unittest-{{.Values.global.suffix}}
  containers:
  - name: istio-proxy
    image: docker.io/istio/proxy_debug:unittest
