istioctl/cmd/testdata/inject-config.yaml
template: |-
  spec:
    initContainers:
    - name: istio-init
      image: docker.io/istio/proxy_init:unittest-{{.Values.global.suffix}}
    containers:
    - name: istio-proxy
      image: docker.io/istio/proxy_debug:unittest
